# CAFAnaCore

./: .gitignore  Binning_8h_source.html  CMakeLists.txt  CutBase_8h_source.html  Cut_8h_source.html  Cutter_8h_source.html  DepMan_8h_source.html  Doxyfile  EnsembleCutter_8h_source.html  EnsemblePairValuer_8h_source.html  EnsembleSource_8h_source.html  EnsembleValuer_8h_source.html  EnsembleWeighter_8h_source.html  EnsureFiniteBase_8h_source.html  FileListSource_8h_source.html  FwdDeclare_8h.html  FwdDeclare_8h_source.html  HistAxis_8h_source.html  Hist_8h_source.html  IDDict_8h_source.html  IEnsembleSource_8h_source.html  IExposureSink_8h_source.html  IFileSource_8h_source.html  IFitSyst_8h_source.html  IFittable_8h_source.html  IGraphElem_8h_source.html  INamed_8h_source.html  IRecordEnsembleSink_8h_source.html  IRecordEnsembleSource_8h_source.html  IRecordSink_8h_source.html  IRecordSource_8h_source.html  ISink_8h_source.html  ISource_8h_source.html  ISyst_8h_source.html  IValueEnsembleSink_8h_source.html  IValuePairEnsembleSink_8h_source.html  IValuePairSink_8h_source.html  IValueSink_8h_source.html  IValueSource_8h_source.html  LICENSE  (+211 more)
.github/: CODEOWNERS
.github/workflows/: doxygen-gh-pages.yml
CAFAna/: CMakeLists.txt  Makefile
CAFAna/Core/: Binning.cxx  Binning.h  CMakeLists.txt  Cut.cxx  Cut.h  CutApplier.h  CutBase.cxx  CutBase.h  Cutter.h  DebugHelpers.cxx  DepMan.cxx  DepMan.h  EnsembleCutter.h  EnsemblePairValuer.h  EnsembleSource.h  EnsembleValuer.h  EnsembleWeighter.h  EnsureFiniteBase.cxx  EnsureFiniteBase.h  FileListSource.cxx  FileListSource.h  FwdDeclare.h  Hist.cxx  Hist.h  HistAxis.cxx  HistAxis.h  IDDict.h  IEnsembleSource.h  IExposureSink.h  IFileSource.h  IFitSyst.cxx  IFitSyst.h  IFittable.cxx  IFittable.h  IGraphElem.cxx  IGraphElem.h  INamed.h  IRecordEnsembleSink.h  IRecordEnsembleSource.h  IRecordSink.h  (+59 more)
CAFAna/ups/: cafanacore.table
cmake/Modules/: FindBoost.cmake  FindEigen.cmake  FindIfdhc.cmake  FindOscLib.cmake  FindSRProxy.cmake  FindStan.cmake  FindStanMath.cmake  FindSundials.cmake  FindTBB.cmake
html/: md_README.html  pages.html
html/search/: all_0.js  pages_0.js
jenkins/: dependencies.sh  jenkins_build.sh  jenkins_collect.sh  make_table.sh
jenkins/version/: Linux64bit+2.6-2.12_debug_e17_stan  Linux64bit+2.6-2.12_debug_e19_stan  Linux64bit+2.6-2.12_prof_e17  Linux64bit+2.6-2.12_prof_e19  Linux64bit+3.10-2.17_debug_c14_n311_stan  Linux64bit+3.10-2.17_debug_c14_n311_stanfree  Linux64bit+3.10-2.17_debug_c14_n319  Linux64bit+3.10-2.17_debug_c14_n319_stan  Linux64bit+3.10-2.17_debug_c14_n319_stanfree  Linux64bit+3.10-2.17_debug_c14_n319_stanthread  Linux64bit+3.10-2.17_debug_c7  Linux64bit+3.10-2.17_debug_c7_n309  Linux64bit+3.10-2.17_debug_c7_n311  Linux64bit+3.10-2.17_debug_c7_n311_stan  Linux64bit+3.10-2.17_debug_c7_n311_stanfree  Linux64bit+3.10-2.17_debug_e17_stan  Linux64bit+3.10-2.17_debug_e19_n308  Linux64bit+3.10-2.17_debug_e19_stan  Linux64bit+3.10-2.17_debug_e20_n309  Linux64bit+3.10-2.17_debug_e20_n311  Linux64bit+3.10-2.17_debug_e20_n311_stan  Linux64bit+3.10-2.17_debug_e20_n311_stanfree  Linux64bit+3.10-2.17_debug_e20_n313  Linux64bit+3.10-2.17_debug_e26_n311_stan  Linux64bit+3.10-2.17_debug_e26_n311_stanfree  Linux64bit+3.10-2.17_debug_e26_n319  Linux64bit+3.10-2.17_debug_e26_n319_stan  Linux64bit+3.10-2.17_debug_e26_n319_stanfree  Linux64bit+3.10-2.17_debug_e26_n319_stanthread  Linux64bit+3.10-2.17_prof_c14_n311_stan  Linux64bit+3.10-2.17_prof_c14_n311_stanfree  Linux64bit+3.10-2.17_prof_c14_n319  Linux64bit+3.10-2.17_prof_c14_n319_stan  Linux64bit+3.10-2.17_prof_c14_n319_stanfree  Linux64bit+3.10-2.17_prof_c14_n319_stanthread  Linux64bit+3.10-2.17_prof_c7  Linux64bit+3.10-2.17_prof_c7_n309  Linux64bit+3.10-2.17_prof_c7_n311  Linux64bit+3.10-2.17_prof_c7_n311_stan  Linux64bit+3.10-2.17_prof_c7_n311_stanfree  (+14 more)
latex/: md_README.tex  refman.tex
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  (+30 more)
